--- a/sub1__1.html
+++ b/sub1__1.html
@@ -704,12 +704,12 @@
                         <!-- depth-1 -->
                         <td class="sub__t__title depth-1">
                           <span>당기지출</span>
-                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
-                          <span class="sub__t__total">20,000,000</span> -->
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제 -->
+                          <span class="sub__t__total">10,000,000</span>
                         </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- .// depth-2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(1)인권비</span><span>10,000,000</span></td>
@@ -717,7 +717,7 @@
                         <td class="depth-3"><span class="sub__title">(3)기타운영비</span><span>10,000,000</span></td>
                         <!-- .// depth-3 -->
                         <!-- depth 2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- depth 2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(4)총회등대회비</span><span>10,000,000</span></td>
@@ -742,12 +742,12 @@
                         <!-- depth-1 -->
                         <td class="sub__t__title depth-1">
                           <span>당기지출</span>
-                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
-                          <span class="sub__t__total">20,000,000</span> -->
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제 -->
+                          <span class="sub__t__total">10,000,000</span>
                         </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- .// depth-2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(1)인권비</span><span>10,000,000</span></td>
@@ -755,7 +755,7 @@
                         <td class="depth-3"><span class="sub__title">(3)기타운영비</span><span>10,000,000</span></td>
                         <!-- .// depth-3 -->
                         <!-- depth 2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- depth 2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(4)총회등대회비</span><span>10,000,000</span></td>
@@ -780,12 +780,12 @@
                         <!-- depth-1 -->
                         <td class="sub__t__title depth-1">
                           <span>당기지출</span>
-                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
-                          <span class="sub__t__total">20,000,000</span> -->
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제 -->
+                          <span class="sub__t__total">10,000,000</span>
                         </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- .// depth-2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(1)인권비</span><span>10,000,000</span></td>
@@ -793,7 +793,7 @@
                         <td class="depth-3"><span class="sub__title">(3)기타운영비</span><span>10,000,000</span></td>
                         <!-- .// depth-3 -->
                         <!-- depth 2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- depth 2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(4)총회등대회비</span><span>10,000,000</span></td>
@@ -818,12 +818,12 @@
                         <!-- depth-1 -->
                         <td class="sub__t__title depth-1">
                           <span>당기지출</span>
-                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
-                          <span class="sub__t__total">20,000,000</span> -->
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제 -->
+                          <span class="sub__t__total">10,000,000</span>
                         </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- .// depth-2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(1)인권비</span><span>10,000,000</span></td>
@@ -831,7 +831,7 @@
                         <td class="depth-3"><span class="sub__title">(3)기타운영비</span><span>10,000,000</span></td>
                         <!-- .// depth-3 -->
                         <!-- depth 2 -->
-                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span></span></td>
+                        <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span class="sub__t__total">10,000,000</span></td>
                         <!-- depth 2 -->
                         <!-- depth 3 -->
                         <td class="depth-3"><span class="sub__title">(4)총회등대회비</span><span>10,000,000</span></td>
@@ -848,7 +848,7 @@
                         <td class="depth-2"><span class="sub__title">기타</span><span>10,000,000</span></td>
                         <!-- .// depth 2 -->
                         <!-- depth 1 -->
-                        <td class="depth-1"><span class="sub__title">차년도 이월금</span><span class="mr--24" >10,000,000</span></td>
+                        <td class="depth-1"><span class="sub__title">차년도 이월금</span><span class="mr--24">10,000,000</span></td>
                         <!-- .// depth 1 -->  
                       </tr>
                       <tr>
@@ -856,12 +856,12 @@
                           <!-- depth-1 -->
                           <td class="sub__t__title depth-1">
                             <span>당기지출</span>
-                            <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
-                            <span class="sub__t__total">20,000,000</span> -->
+                            <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제 -->
+                            <span class="sub__t__total">10,000,000</span>
                           </td>
                           <!-- .// depth-1 -->
                           <!-- depth-2 -->
-                          <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
+                          <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span class="sub__t__total">10,000,000</span></td>
                           <!-- .// depth-2 -->
                           <!-- depth 3 -->
                           <td class="depth-3"><span class="sub__title">(1)인권비</span><span>10,000,000</span></td>
@@ -869,7 +869,7 @@
                           <td class="depth-3"><span class="sub__title">(3)기타운영비</span><span>10,000,000</span></td>
                           <!-- .// depth-3 -->
                           <!-- depth 2 -->
-                          <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span></span></td>
+                          <td class="sub__t__title depth-2"><span class="sub__title">사업수행비용</span><span class="sub__t__total">10,000,000</span></td>
                           <!-- depth 2 -->
                           <!-- depth 3 -->
                           <td class="depth-3"><span class="sub__title">(4)총회등대회비</span><span>10,000,000</span></td>
@@ -917,7 +917,7 @@
                     <thead>
                       <tr class="th-depth">
                         <th scope="col"><div class="min__h__box text--c">구분</div></th>
-                        <th scope="col"><div class="min__h__box text--c">자산</div></th>
+                        <th class="noBorder--r" scope="col"><div class="min__h__box text--c">자산</div></th>
                         <th scope="col"><div class="min__h__box text--c"><p>현금및예금</p></div></th>
                         <th scope="col"><div class="min__h__box text--c"><p>토지</p></div></th>
                         <th scope="col"><div class="min__h__box text--c"><p>건물</p></div></th>
