(20241120)이민혁 회계공시 등록 페이지 통합

--- a/sub1__1.html
+++ b/sub1__1.html
@@ -516,7 +516,7 @@
                   </div>
                 </div>
                 <div class="mo__slide">
-                  <table class="acordian__table">
+                  <table class="acordian__table depth-marin">
                     <caption>자산 및 부채현황 모바일 표 데이터</caption>
                     <tbody>
                       <!-- 총계 -->
@@ -600,7 +600,7 @@
                 </div>
                 <!-- 데이터 오픈 엔드 하단 내역 스타트 -->
                 <div class="mo__slide">
-                  <table class="acordian__table">
+                  <table class="acordian__table depth-margin">
                     <caption>수입 현황 부채현황</caption>
                     <tbody>
                       <!-- 총계 -->
@@ -695,7 +695,7 @@
                       아래 table에 depth-margin을 추가하시면 depth-2, depth-3에 각각 왼쪽 마진이 추가됩니다.
                       <table class="acordian__table depth-margin">
                   -->
-                  <table class="acordian__table">
+                  <table class="acordian__table depth-margin">
                     <caption>지출현황</caption>
                     <tbody>
                       <!-- sub__t__title 과 depth 클래스를 가지고 있을 시 하위 자식 요소 토글 -->
