회계 숫자 추가

--- a/public__register.html
+++ b/public__register.html
@@ -1525,7 +1525,7 @@
                             <td class="depth-1"><span class="sub__title">부채</span><span>100,000,000,000</span></td>
                           </tr>
                           <tr>
-                            <th class="t__title">ⓑ일반회계</th>
+                            <th class="t__title">ⓑ일반회계<span>100,000,000,000</span></th>
                             <td class="depth-1"><span class="sub__title">자산</span><span>100,000,000,000</span></td>
                             <td class="depth-2"><span class="sub__title">현금 및 예금</span><span><input type="text" value="100,000,000,000"></span></td>
                             <td class="depth-2"><span class="sub__title">토지</span><span><input type="text" value="100,000,000,000"></span></td>
@@ -1534,7 +1534,7 @@
                             <td class="depth-1"><span class="sub__title">부채</span><span>100,000,000,000</span></td>
                           </tr>
                           <tr>
-                            <th class="t__title">ⓒ특별회계</th>
+                            <th class="t__title">ⓒ특별회계<span>100,000,000,000</span></th>
                             <td class="depth-1"><span class="sub__title">자산</span><span>100,000,000,000</span></td>
                             <td class="depth-2"><span class="sub__title">현금 및 예금</span><span><input type="text" value="100,000,000,000"></span></td>
                             <td class="depth-2"><span class="sub__title">토지</span><span><input type="text" value="100,000,000,000"></span></td>
@@ -1543,7 +1543,7 @@
                             <td class="depth-1"><span class="sub__title">부채</span><span>100,000,000,000</span></td>
                           </tr>
                           <tr>
-                            <th class="t__title">ⓓ보조금사업회계</th>
+                            <th class="t__title">ⓓ보조금사업회계<span>100,000,000,000</span></th>
                             <td class="depth-1"><span class="sub__title">자산</span><span>100,000,000,000</span></td>
                             <td class="depth-2"><span class="sub__title">현금 및 예금</span><span><input type="text" value="100,000,000,000"></span></td>
                             <td class="depth-2"><span class="sub__title">토지</span><span><input type="text" value="100,000,000,000"></span></td>
@@ -1552,7 +1552,7 @@
                             <td class="depth-1"><span class="sub__title">부채</span><span>100,000,000,000</span></td>
                           </tr>
                           <tr>
-                            <th class="t__title">ⓓ보조금사업회계</th>
+                            <th class="t__title">ⓓ수익사업회계<span>100,000,000,000</span></th>
                             <td class="depth-1"><span class="sub__title">자산</span><span>100,000,000,000</span></td>
                             <td class="depth-2"><span class="sub__title">현금 및 예금</span><span><input type="text" value="100,000,000,000"></span></td>
                             <td class="depth-2"><span class="sub__title">토지</span><span><input type="text" value="100,000,000,000"></span></td>
@@ -1802,7 +1802,7 @@
                             </tr>
                             <!-- 특별회계 -->
                             <tr>
-                              <th class="t__title">ⓒ특별회계</th>
+                              <th class="t__title">ⓒ특별회계<span>100,000,000,000</span></th>
                               <td class="depth-1"><span>당기지출</span><span>100,000,000,000</span></td>
                               <td class="depth-2"><span>일반관리비용</span><span>100,000,000,000</span></td>
                               <td class="depth-3"><span class="sub__title">(1)인권비</span><span><input type="text" value="1,469,246"></span></td>
@@ -1823,7 +1823,7 @@
                             </tr>
                             <!-- 보조금사업회계 -->
                             <tr>
-                              <th class="t__title">ⓓ보조금사업회계</th>
+                              <th class="t__title">ⓓ보조금사업회계<span>100,000,000,000</span></th>
                               <td class="depth-1"><span>당기지출</span><span>100,000,000,000</span></td>
                               <td class="depth-2"><span>일반관리비용</span><span>100,000,000,000</span></td>
                               <td class="depth-3"><span class="sub__title">(1)인권비</span><span><input type="text" value="1,469,246"></span></td>
@@ -1844,7 +1844,7 @@
                             </tr>
                             <!-- 수익사업회계 -->
                             <tr>
-                              <th class="t__title">ⓔ수익사업회계</th>
+                              <th class="t__title">ⓔ수익사업회계<span>100,000,000,000</span></th>
                               <td class="depth-1"><span>당기지출</span><span>100,000,000,000</span></td>
                               <td class="depth-2"><span>일반관리비용</span><span>100,000,000,000</span></td>
                               <td class="depth-3"><span class="sub__title">(1)인권비</span><span><input type="text" value="1,469,246"></span></td>
