(20241122) 이민혁 주요회계공시 항목 설명 이미지 교체 및 default css 변경

--- a/main__accn__desc.html
+++ b/main__accn__desc.html
@@ -235,8 +235,9 @@
                                 <!-- ./ 상단 배너 -->
                                 <!-- 노동조합 설명 1 -->
                                 <div class="content__section">
-                                    <div class="image__container w__image">
-                                        <img src="img/union__system__image__01.png" alt="노동조합 설명 이미지 1">
+                                    <div class="image__container">
+                                        <img src="img/union__system__image__01.png" alt="노동조합 설명 이미지 1" class="w__cont">
+                                        <img src="img/union__system__image__01_mo.png" alt="노동조합 설명 모바일 이미지 1" class="m__cont">
                                     </div>
                                 </div>
                                 <!-- 노동조합 설명 테이블 -->
@@ -299,7 +300,8 @@
                                     <h2 class="title__lv2">자산 및 부채</h2>
                                     <!-- 상단 이미지 -->
                                     <div class="image__container">
-                                        <img src="img/asset__organization.png" alt="노동조합체계 조직도 이미지">
+                                        <img src="img/asset__organization.png" alt="노동조합체계 조직도 이미지" class="w__cont">
+                                        <img src="img/asset__organization__mo.png" alt="노동조합체계 조직도 모바일 이미지" class="m__cont">
                                     </div>
                                     <!-- ./ 상단 이미지 -->
                                     <!-- 자산 및 부채 테이블 -->
@@ -345,7 +347,8 @@
                                     <h2 class="title__lv2">수입</h2>
                                     <!-- 상단 이미지 -->
                                     <div class="image__container">
-                                        <img src="img/import__organization.png" alt="수입 조직도 이미지">
+                                        <img src="img/import__organization.png" alt="수입 조직도 이미지" class="w__cont">
+                                        <img src="img/import__organization__mo.png" alt="수입 조직도 모바일 이미지" class="m__cont">
                                     </div>
                                     <!-- ./ 상단 이미지 -->
                                     <!-- 수입 테이블 -->
@@ -380,7 +383,8 @@
                                 <div class="content__section">
                                     <h2 class="title__lv2">지출</h2>
                                     <div class="image__container">
-                                        <img src="img/expend__organization.png" alt="지출 조직도 이미지">
+                                        <img src="img/expend__organization.png" alt="지출 조직도 이미지" class="w__cont">
+                                        <img src="img/expend__organization__mo.png" alt="지출 조직도 모바일 이미지" class="m__cont">
                                     </div>
                                     <!-- 지출 테이블 -->
                                     <div class="table__vertical infoTable">
